[project]
name = "svix-ksuid"
version = "0.6.2"
description = "A pure-Python KSUID implementation"
authors = [
    { name = "Svix", email = "development@svix.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "python-baseconv"
]
keywords = [
    "svix",
    "ksuid",
]

[project.urls]
Repository = "https://github.com/svix/python-ksuid/"
Issues = "https://github.com/svix/python-ksuid/issues"
Changelog = "https://github.com/svix/python-ksuid/blob/main/ChangeLog.md"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [".github/*", "scripts/*", "tests/*", 'uv.lock', "mypy.ini", "/.*"]

[tool.hatch.build.targets.wheel]
packages = ["ksuid"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ty>=0.0.23",
    "ruff>=0.15.6",
]

[tool.ruff]
# we're not on VT220's any more
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
]
